# Manus

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
manus/: __init__.py
manus/agents/: __init__.py  callbacks.py  enhanced.py  error_tracker.py  executor.py  learning_agent.py  learning_engine.py  planner.py  react.py  reflector.py  reflector_executor.py  state.py  team.py  verifier.py
manus/agents/plan_execute/: __init__.py  config.py  engine.py  messaging.py  reliable_messaging.py  repository.py  test_worker.py  websocket.py  worker.py
manus/api/: __init__.py  app.py  usage.py
manus/auth/: __init__.py  oauth.py  routes.py  service.py
manus/cli/: __init__.py  main.py
manus/config/: __init__.py  loader.py  models.yaml
manus/context/: __init__.py  cross_task.py
manus/core/: __init__.py  constants.py  exceptions.py  types.py
manus/db/: __init__.py  database.py  models.py
manus/metrics/: __init__.py  cost.py  recorder.py  service.py  tokenizer.py
manus/models/: __init__.py  base.py  factory.py
manus/multimodal/: __init__.py  audio.py  base.py  pdf.py  screen.py  video.py  vision.py
manus/queue/: __init__.py  client.py  database.py  manager.py  repository.py  websocket.py  worker.py
manus/sandbox/: __init__.py  base.py  docker.py  manager.py  subprocess.py
manus/tools/: __init__.py  base.py  browser.py  code_execution.py  file_manager.py  image_generation.py  registry.py  search.py
manus/websocket/: __init__.py  events.py  handler.py  manager.py  stream.py
tests/: test_error_tracker.py  test_executor.py  test_learning_agent.py  test_learning_engine.py  test_reflector_executor.py
web/: package-lock.json
web/src/app/: layout.tsx
(+28 files in other folders)
